--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     
     <t><h>NEET Asprirant Sam</h1></t>
 
- <img src="https://raw.githubusercontent.com/pentestersam/neetaspirantsam/main/Motivational_quotes_for_neet_aspirants-1.jpg" alt="NEET ASPIRANT SAM" />
+ <img src="https://raw.githubusercontent.com/pentestersam/neetaspirantsam/main/Motivational_quotes_for_neet_aspirants-1.jpg" alt="NEET ASPIRANT SAM"  height="400" width="460" />
  
   
     <h1><t>STUDY MATERIALS FOR 10TH</h1>
