--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <Doctype html>
   <body>
     
-    <h>NEET ASPIRANT SAM </h1>
+    <h1>NEET ASPIRANT SAM </h1>
 
  <img src="https://raw.githubusercontent.com/pentestersam/neetaspirantsam/main/Motivational_quotes_for_neet_aspirants-1.jpg" alt="NEET ASPIRANT SAM"  height="400" width="500" />
  
