--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     
     <h1>NEET ASPIRANTS </h1>
-    <h3>Site Created By Pentester Shani</h3>
+    <h3>Site Created By Pentester Sam</h3>
     
 
  <img src="https://raw.githubusercontent.com/pentestersam/neetaspirantsam/main/Motivational_quotes_for_neet_aspirants-1.jpg" alt="NEET ASPIRANT SAM"  height="400" width="500" />
