--- a/index.html
+++ b/index.html
@@ -45,16 +45,13 @@
          
    <br>
   <br>
+  <h5>Physcis Will Be Avilable Soon !!</h5>
   
-
 <button><h3><a href="https://drive.google.com/drive/folders/1Pq73CEXcIDR_O5lRLVixiIpl5ZuNEssg?usp=sharing" target=_blank">Chemestery-Module</a></h3></button>
 
+<button><h3><a href="https://drive.google.com/drive/folders/1OgoP1Okk8Nwo057QISk1B7kiAVbG5sAY?usp=sharing" target=_blank">Biolgy-Module</a></h3></button>
 
-<button><h3><a href="https://drive.google.com/drive/folders/1OgoP1Okk8Nwo057QISk1B7kiAVbG5sAY?usp=sharing" target=_blank">Physics-Module</a></h3></button>
-
-<h5>Physcis Will Be Avilable Soon !!</h5>
   
-
 <br>
 <br>
 <br>
