--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1>https://shanikushwaha4u.github.io/NEET/</h1>
 <br>
 
-<H2>Note:- This Site Has Been Replaced From Above Link </h2>
+<H2>Note:- This Site Has Been Replaced From Above Link<br>
+Please Visit Given Above Link To Find Stuffs For NEET   </h2>
 </body>
 </html>
